<resources>
    <string name="app_name">Mra Job</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="register_user">Not signed in? Lets start with creating your account.</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="title_activity_job_seeker_home">JobSeekerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="john_doe">John Doe</string>
    <string name="user_phone">+254709123456</string>
    <string name="user_rating">0.0</string>
    <string name="sign_out">Sign Out</string>
    <string name="permission_required">Allow permission to access Location.</string>
</resources>