<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/proximanovaregular"
                android:textColor="@color/black"
                android:text="@string/register_user"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2"
                android:layout_marginEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_first_name"
                        android:hint="@string/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_last_name"
                        android:hint="@string/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_phone_number"
                    android:hint="@string/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_user"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:text="@string/btn_continue"
        android:background="@drawable/btn_custom_bg"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_height="wrap_content"/>

</RelativeLayout>