<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:gravity="center_vertical"
            android:src="@drawable/ic_baseline_star_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:fontFamily="@font/proximanovaregular"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/user_rating" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanovaregular"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/john_doe"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_user_phone_number"
        android:layout_width="wrap_content"
        android:fontFamily="@font/proximanovaregular"
        android:layout_height="wrap_content"
        android:text="@string/user_phone" />
</LinearLayout>